--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
       {
-        "source": "/api/:path*",
+        "source": "api/:path*",
         "destination": "https://todo-dna7.onrender.com/api/:path*"
       }
     ]
