--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
       {
         "source": "api/:path*",
-        "destination": "https://todo-dna7.onrender.com/api/:path*"
+        "destination": "https://user-service-gnz6.onrender.com/api/:path*"
       }
     ]
   }
