--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
       {
-        "source": "api/:path*",
+        "source": "/api/:path*",
         "destination": "https://user-service-gnz6.onrender.com/api/:path*"
       }
     ]
